[gd_scene load_steps=4 format=3 uid="uid://7f80i6fpxc52"]

[ext_resource type="Script" path="res://Pipe/DoublePipe.gd" id="1_pvs03"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ytk4s"]
size = Vector2(80, 650)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wjr6"]
size = Vector2(20, 160)

[node name="Control" type="RigidBody2D"]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_pvs03")

[node name="TopPipe" type="RigidBody2D" parent="."]
position = Vector2(0, -408)
collision_mask = 0
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
shape = SubResource("RectangleShape2D_ytk4s")

[node name="Control" type="Control" parent="TopPipe/CollisionShape2D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -325.0
offset_right = 40.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="TopPipe/CollisionShape2D/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -650.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0.738281, 0.0461426, 1)

[node name="ColorRect2" type="ColorRect" parent="TopPipe/CollisionShape2D/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0.738281, 0.0461426, 1)

[node name="BottomPipe" type="RigidBody2D" parent="."]
position = Vector2(0, 408)
collision_mask = 0
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
shape = SubResource("RectangleShape2D_ytk4s")

[node name="Control" type="Control" parent="BottomPipe/CollisionShape2D"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -325.0
offset_right = 40.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="BottomPipe/CollisionShape2D/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_right = 40.0
offset_bottom = 650.0
grow_horizontal = 2
color = Color(0, 0.738281, 0.0461426, 1)

[node name="ColorRect2" type="ColorRect" parent="BottomPipe/CollisionShape2D/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
color = Color(0, 0.738281, 0.0461426, 1)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -21.0
offset_top = -50.0
offset_right = 19.0
offset_bottom = 50.0

[node name="ScoreArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
shape = SubResource("RectangleShape2D_3wjr6")

[connection signal="body_entered" from="ScoreArea" to="." method="_on_score_area_body_entered"]
